Fix overlay width so the content isn't cut off

--- a/stylesheets/flappy.css
+++ b/stylesheets/flappy.css
@@ -1,5 +1,5 @@
 #flappy-container {
-  width: 400px;
+  width: 424px;
   margin: auto;
   margin-top: 50px;
 }
